--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="shared_pref_title">bmb_shared</string>
     <string name="event">Event</string>
     <string name="greeting">Hoping to see you on the board. to book more tickets using BookMyBus use: https://www.bookmybus.com</string>
+    <string name="comfirm">comfirm</string>
 </resources>
